# flab-DIY-stack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/en/: README.txt
src/en/1_20_Home_Lab/: 040_Accounting_of_reagents.md
src/ru/: BookResume.md
src/ru/1_10_Intro/: 010_intro.md  020_about_film_dev.md  030_manifest.md  035_lab_concept.md  040_phenifone_intro.md  045_dev_in_homelab.md  050_Encoding_system.md
src/ru/1_20_Home_Lab/: 010_HomeLab_Intro.md  020_Safity.md  025_Chemistry_Utilization.md  030_EncodingSystem.md  040_Accounting_of_reagents.md  translation_guideline.md
src/ru/1_30_Chemistry_Storage/: 010_Storage_Intro.md  020_Storage_Basics.md  030_Packaging_guidelines.md  050_LabInventory.md
src/ru/2_10_NegativeProcess/: 005_Negative_Process_intro.md  010_Cookbook_essentials.md  015_mixing_strategy.md  018_Solutions_sequence.md  020_Solutions_verification.md  040_Development_verification.md
src/ru/2_20_Recipies/: 001_Recipies_Intro.md  101_Soaking.md  201D_Kodak_D-76.md  202D_Ilford_Microphen.md  203D_F-MicroStable.md  204D_F-96_Stable.md  205D_F-23-F5aRx.md  206D_F-Nuar.md  206D_PQ-Nuar.md  207D_F-10Sharp.md  207D_HQ-OFORT.md  301_Stop.md  401F_A-300MS.md  402F_A-300LMS.md  501_Initial_Wash.md  502_Final_Wash.md
src/ru/3_10_Equipment/: 010-Intro.md  creative_plan.txt
src/ru/3_20_Agitator/: 010_Agitator_Intro.md  015_Engeneering.md  017_Inventry.md  302_Wheels.md  303_Frame.md  304_Mount_Base.md  305_Face_Wall_mount.md  306_BackWall_Mount.md  307_PrepareWiering.md  309_FramePreparation.md  310_TopCoverPrepare.md  (+5 more)
(+97 files in other folders)
